# SyncToFrappe

./: .gitignore  README.md  launch.json  package.json  pyproject.toml
.github/workflows/: deploy.yaml
dashboard/: README.md  package-lock.json  package.json
jupyter/: document.ipynb  realtime.ipynb
mabecenter/: hooks.py  installer.py  modules.txt  package.json
mabecenter/mabecenter/custom/: contact.json  customer.json  packed_item.json  sales_order.json
mabecenter/mabecenter/doctype/bank_card/: bank_card.js  bank_card.json  bank_card.py  test_bank_card.py
mabecenter/mabecenter/doctype/broker_item/: broker_item.json  broker_item.py
mabecenter/mabecenter/doctype/company_item/: company_item.json  company_item.py
mabecenter/mabecenter/doctype/dependent_item/: dependent_item.json  dependent_item.py
mabecenter/mabecenter/doctype/document_item/: document_item.json  document_item.py
mabecenter/mabecenter/doctype/vtigercrm_sync/: vtigercrm_sync.css  vtigercrm_sync.js  vtigercrm_sync.json  vtigercrm_sync.py  vtigercrm_sync_list.js
mabecenter/mabecenter/doctype/vtigercrm_sync_log/: test_vtigercrm_sync_log.py  vtigercrm_sync_log.js  vtigercrm_sync_log.json  vtigercrm_sync_log.py
mabecenter/mabecenter/page/testing/: testing.js  testing.json
mabecenter/notebooks/: local.ipynb  remote.ipynb
mabecenter/public/dashboard/: main-TUZRJFRL.js
mabecenter/public/js/: setup_wizard.js
mabecenter/public/js/testing/: App.vue  testing.bundle.js
mabecenter/setup/setup_wizard/: setup_wizard.py
mabecenter/translations/: es-CO.csv
mabecenter/www/: dashboard.html
(+16 files in other folders)
