[project]
name = "mabecenter"
authors = [
    { name = "Dante Devenir", email = "dantedevenir@outlook.com"}
]
description = "Test app customize"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    "sqlalchemy>=2.0.36",
    "pymysql>=1.1.1"
    # "frappe~=15.0.0" # Installed and managed by bench.
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"
